--- a/index.css
+++ b/index.css
@@ -3266,6 +3266,9 @@ figure.highlight pre .javascript .function {
   display: block;
 }
 #footer {
+  display: flex; /* 将父容器设置为Flexbox */
+  flex-direction: column; /* 垂直排列子元素 */
+  align-items: center; /* 在交叉轴（水平方向）上居中对齐所有子元素 */
   position: relative;
   background-color: #49b1f5;
   background-attachment: scroll;
