--- a/index.css
+++ b/index.css
@@ -3359,6 +3359,9 @@ figure.highlight pre .javascript .function {
   white-space: nowrap;
 }
 #footer .footer-other {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 40px 20px;
   width: 100%;
   text-align: center;
